--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0",
+    "mongoose": "7.6.3",
     "nodemon": "^3.1.1"
   }
 }
