adding hpa and rolling updates

--- a/yaml/MongoDBExpress/mongodb-express-deployment-latest.yaml
+++ b/yaml/MongoDBExpress/mongodb-express-deployment-latest.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mongodb-express
-        image: abhinagp/rest-api:1.0
+        image: abhinagp/rest-api:latest
         resources:
           requests:
             cpu: "200m"
